# aiHealth

./: diabetes.sql
diabetes_assistant/diabetes_assistant/: .env  main.py  pyproject.toml
diabetes_assistant/diabetes_assistant/app/: config.py  database.py
diabetes_assistant/diabetes_assistant/app/core/: diet_advisor.py  health_analyzer.py  knowledge_base.py  langgraph_agent.py  llm_client.py  rag_engine.py  vector_store.py
diabetes_assistant/diabetes_assistant/app/models/: __init__.py  blood_sugar.py  chat_history.py  diet_record.py  exercise.py  health_report.py  medication.py  patient.py
diabetes_assistant/diabetes_assistant/app/routers/: __init__.py  blood_sugar.py  chat.py  diet_record.py  exercise.py  health_report.py  medication.py  patient.py
diabetes_assistant/diabetes_assistant/app/schemas/: blood_sugar.py  chat.py  diet_record.py  exercise.py  health_report.py  medication.py  patient.py
diabetes_assistant/diabetes_assistant/data/chroma_db/: chroma.sqlite3
frontend/frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/frontend/src/: App.vue  main.ts
frontend/frontend/src/api/: bloodSugar.ts  chat.ts  diet.ts  exercise.ts  index.ts  medication.ts  patient.ts  reports.ts
frontend/frontend/src/components/: BloodSugarChart.vue  ChatMessage.vue  DietCard.vue  HealthScore.vue  MedicationReminder.vue  Navbar.vue  Sidebar.vue
frontend/frontend/src/router/: index.ts
frontend/frontend/src/stores/: bloodSugar.ts  chat.ts  diet.ts  patient.ts
frontend/frontend/src/types/: index.ts
frontend/frontend/src/utils/: charts.ts  (+1 more)
(+8 files in other folders)
