[project]
name = "diabetes-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9,<2.0",
    "fastapi>=0.115.6",
    "langchain>=1.3.4,<2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.2.4,<2.0",
    "openai>=1.80.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.0.0",
    "tortoise-orm[asyncmy]>=0.23.0",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.34.0",
]
